--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,21 @@
 *.exe
 *.out
 *.app
+
+#
+
+*.suo
+*.db
+*.opendb
+*.ipch
+*.dat
+*.ilk
+*.pdb
+*.sln
+*.log
+*.tlog
+*.idb
+*.lastbuildstate
+*.vcxproj
+*.filters
+*.user
